--- a/config/default.yaml
+++ b/config/default.yaml
@@ -11,8 +11,8 @@ jira:
   start_transition_id: 21
   done_transition_id: 41
   project: SBOX
-  issue_type_id: Bug
-  issue_type_name: 10900
+  issue_type_id: 10900
+  issue_type_name: Bug
 
 secrets:
   cftptl-intsvc:
