Remove CCD-specific Jira fields

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "start:dev": "set -o allexport; source .env; set +o allexport && node app.js",
     "watch": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
