Update secret names and remove redundant config settings

--- a/config/custom-environment-variables.yaml
+++ b/config/custom-environment-variables.yaml
@@ -6,18 +6,10 @@ jira:
   start_transition_id: JIRA_START_TRANSITION_ID
   done_transition_id: JIRA_DONE_TRANSITION_ID
   project: JIRA_PROJECT
-  issue_type_id: JIRA_ISSUE_TYPE_ID
-  issue_type_name: JIRA_ISSUE_TYPE_NAME
-  bug_type_id: JIRA_BUG_TYPE_ID
-  bug_type_name: JIRA_BUG_TYPE_NAME
-  service_type_id: JIRA_SERVICE_TYPE_ID
-  service_type_name: JIRA_SERVICE_TYPE_NAME
-  role_type_id: JIRA_ROLE_TYPE_ID
-  role_type_name: JIRA_ROLE_TYPE_NAME
 
 secrets:
   cftptl-intsvc:
     jira-username: JIRA_USERNAME
     jira-api-token: JIRA_API_TOKEN
-    slack-bot-token: SLACK_BOT_TOKEN
-    slack-app-token: SLACK_APP_TOKEN
+    idam-slack-bot-token: SLACK_BOT_TOKEN
+    idam-slack-app-token: SLACK_APP_TOKEN
