--- a/config/default.yaml
+++ b/config/default.yaml
@@ -11,18 +11,10 @@ jira:
   start_transition_id: 21
   done_transition_id: 41
   project: SBOX
-  issue_type_id: 3
-  issue_type_name: Task
-  bug_type_id: 10900
-  bug_type_name: Bug
-  service_type_id: 17701
-  service_type_name: Open ID Connect Service
-  role_type_id: 17702
-  role_type_name: User Role
 
 secrets:
   cftptl-intsvc:
-    jira-username: JIRA_USERNAME
+    jira-usernidamame: JIRA_USERNAME
     jira-api-token: JIRA_API_TOKEN
-    slack-bot-token: SLACK_BOT_TOKEN
-    slack-app-token: SLACK_APP_TOKEN
+    idam-slack-bot-token: SLACK_BOT_TOKEN
+    idam-slack-app-token: SLACK_APP_TOKEN
