--- a/config/default.yaml
+++ b/config/default.yaml
@@ -8,7 +8,7 @@ jira:
 
 secrets:
   cftptl-intsvc:
-    jira-usernidamame: JIRA_USERNAME
+    jira-username: JIRA_USERNAME
     jira-api-token: JIRA_API_TOKEN
     idam-slack-bot-token: SLACK_BOT_TOKEN
     idam-slack-app-token: SLACK_APP_TOKEN
