--- a/config/default.yaml
+++ b/config/default.yaml
@@ -12,3 +12,5 @@ secrets:
     jira-api-token: JIRA_API_TOKEN
     idam-slack-bot-token: SLACK_BOT_TOKEN
     idam-slack-app-token: SLACK_APP_TOKEN
+
+service-refresh-time: 15
