--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "idam-slack-help-bot",
+  "name": "em-slack-help-bot",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
