--- a/config/custom-environment-variables.yaml
+++ b/config/custom-environment-variables.yaml
@@ -9,5 +9,5 @@ secrets:
   cftptl-intsvc:
     jira-username: JIRA_USERNAME
     jira-api-token: JIRA_API_TOKEN
-    idam-slack-bot-token: SLACK_BOT_TOKEN
-    idam-slack-app-token: SLACK_APP_TOKEN
+    em-slack-bot-token: SLACK_BOT_TOKEN
+    em-slack-app-token: SLACK_APP_TOKEN
